# xtts-api-server

./: .dockerignore  README.md  pyproject.toml
.github/workflows/: build-image.yml
docker/: cpu.Dockerfile  docker-compose.yml
